--- a/package.json
+++ b/package.json
@@ -26,6 +26,13 @@
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.16.0",
     "material-ui": "^0.16.6",
-    "react-tap-event-plugin": "^2.0.1"
+    "react-tap-event-plugin": "^2.0.1",
+    "react-redux": "^5.0.1",
+    "react-router": "^3.0.0",
+    "react-router-redux": "^4.0.7",
+    "redux": "^3.6.0",
+    "redux-form": "^6.4.3",
+    "redux-logger": "^2.7.4",
+    "redux-thunk": "^2.1.0"
   }
 }
