--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "description": "",
   "scripts": {
-    "start": "./node_modules/webpack-dev-server/bin/webpack-dev-server.js --content-base www --host 0.0.0.0",
+    "start": "./node_modules/webpack-dev-server/bin/webpack-dev-server.js --host 0.0.0.0",
     "build": "webpack"
   },
   "author": "https://github.com/asimon91, https://github.com/gisce",
@@ -30,6 +30,8 @@
     "react-redux": "^5.0.1",
     "react-router": "^3.0.0",
     "react-router-redux": "^4.0.7",
+    "react-hot-loader": "^1.3.1",
+    "webpack-hot-middleware": "^2.15.0",
     "redux": "^3.6.0",
     "redux-form": "^6.4.3",
     "redux-logger": "^2.7.4",
