--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "webpack-dev-server": "2.4.1"
   },
   "devDependencies": {
+    "axios": "^0.15.3",
     "babel-core": "^6.21.0",
     "babel-eslint": "^7.1.1",
     "babel-loader": "^6.3.2",
@@ -25,6 +26,7 @@
     "babel-preset-react": "^6.16.0",
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.16.0",
+    "css-loader": "^0.26.1",
     "material-ui": "^0.16.6",
     "react-tap-event-plugin": "^2.0.1",
     "react-redux": "^5.0.1",
